--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: HXE Blog
 SEOTitle: 雪儿的博客 | HXE Blog
 header-img: img/forWEBblog.jpeg
 email: xueerhandk@gmail.com
-description: "生信学习日记！"
+#description: "生信学习日记"
 keyword: "HXE, Cher, 韩雪儿的博客, hanxueer, 生信, 非编码, RNA结构, bioinformatics, non-coding, RNA structure"
 url: "http://Cher-HAN.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -100,16 +100,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "rth",
+        href: "https://rth.dk/"
     }
 ]
