--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: HXE Blog
 SEOTitle: 雪儿的博客 | HXE Blog
 header-img: img/forWEBblog.jpeg
 email: xueerhandk@gmail.com
-#description: "生信学习日记"
+description: "生信学习日记！"
 keyword: "HXE, Cher, 韩雪儿的博客, hanxueer, 生信, 非编码, RNA结构, bioinformatics, non-coding, RNA structure"
 url: "http://Cher-HAN.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -62,7 +62,7 @@ kramdown:
 
 # Gitalk
 gitalk:
-  enable: true    #是否开启Gitalk评论
+  enable: false    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
   repo: qiubaiying.github.io    #仓库名称
